<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="10dp"
    android:id="@+id/event_invite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Invitation Header -->

        <!-- Placeholder text, use stirng resource to change-->
        <TextView
            android:id="@+id/invited_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="You're invited!"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/event_title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- Replace Placeholder Image! -->
        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/image_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#F8F8F8"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <!-- Place holder profile pic, replace!-->
            <ImageView
                android:id="@+id/organizer_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_placeholder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Organized by"
                    android:textColor="#888888"
                    android:textSize="12sp" />

                <!-- Placeholder text, use stirng resource to change-->
                <TextView
                    android:id="@+id/organizer_name"
                    android:layout_width="153dp"
                    android:layout_height="34dp"
                    android:text="@string/Organizer"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!-- Address Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#F1F1F1"
            android:backgroundTint="#E9E9E9"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <!-- Placeholder text, use stirng resource to change-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:src="@drawable/location_outline"
                app:tint="#000000" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_text"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Time Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#F1F1F1"
            android:backgroundTint="#E9E9E9"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:src="@drawable/clock_outline"
                app:tint="#000000" />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- More Details Button -->
        <Button
            android:id="@+id/btn_more_details"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#5059D5"
            android:text="More Details"
            app:icon="@drawable/outline_organize_24"
            app:iconSize="24dp"
            app:iconTint="#FFFFFF" />


        <!-- Accept / Decline Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="1dp"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#D0351D"
                android:padding="10dp"
                android:radius="20dp"
                android:text="Decline"
                android:textColor="#FFFFFF"
                app:icon="@drawable/ic_x_mark"
                app:iconSize="32dp" />

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="8dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#36A212"
                android:padding="10dp"
                android:text="Accept"
                android:textColor="#FFFFFF"
                app:icon="@drawable/ic_check"
                app:iconSize="32dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
